// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot Tests with Verification > All Heading Elements (h1-h6) > should match snapshot for all heading elements 1`] = `
<page>
  <view
    style="flex-direction: column;"
  >
    <text
      style="font-size: 32px; font-weight: bold; color: var(--lhr-text-color);"
    >
      Heading 1
    </text>
    <text
      style="font-size: 24px; font-weight: bold; color: var(--lhr-text-color);"
    >
      Heading 2
    </text>
    <text
      style="font-size: 20px; font-weight: bold; color: var(--lhr-text-color);"
    >
      Heading 3
    </text>
    <text
      style="font-size: 18px; font-weight: bold; color: var(--lhr-text-color);"
    >
      Heading 4
    </text>
    <text
      style="font-size: 16px; font-weight: bold; color: var(--lhr-text-color);"
    >
      Heading 5
    </text>
    <text
      style="font-size: 14px; font-weight: bold; color: var(--lhr-text-color);"
    >
      Heading 6
    </text>
  </view>
</page>
`;

exports[`Snapshot Tests with Verification > All Table Elements > should match snapshot for complete table structure 1`] = `
<page>
  <view
    style="display: flex; flex-direction: column; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color);"
  >
    <view
      style="display: flex; flex-direction: row;"
    >
      <view
        style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); background-color: var(--lhr-bg-color-secondary); font-weight: bold; color: var(--lhr-text-color);"
      >
        <text
          style="font-weight: bold; color: var(--lhr-text-color);"
        >
          Header 1
        </text>
      </view>
      <view
        style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); background-color: var(--lhr-bg-color-secondary); font-weight: bold; color: var(--lhr-text-color);"
      >
        <text
          style="font-weight: bold; color: var(--lhr-text-color);"
        >
          Header 2
        </text>
      </view>
      <view
        style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); background-color: var(--lhr-bg-color-secondary); font-weight: bold; color: var(--lhr-text-color);"
      >
        <text
          style="font-weight: bold; color: var(--lhr-text-color);"
        >
          Header 3
        </text>
      </view>
    </view>
    <view>
      <view
        style="display: flex; flex-direction: row;"
      >
        <view
          style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
        >
          <text
            style="color: var(--lhr-text-color-secondary);"
          >
            Body 1-1
          </text>
        </view>
        <view
          style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
        >
          <text
            style="color: var(--lhr-text-color-secondary);"
          >
            Body 1-2
          </text>
        </view>
        <view
          style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
        >
          <text
            style="color: var(--lhr-text-color-secondary);"
          >
            Body 1-3
          </text>
        </view>
      </view>
      <view
        style="display: flex; flex-direction: row;"
      >
        <view
          style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
        >
          <text
            style="color: var(--lhr-text-color-secondary);"
          >
            Body 2-1
          </text>
        </view>
        <view
          style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
        >
          <text
            style="color: var(--lhr-text-color-secondary);"
          >
            Body 2-2
          </text>
        </view>
        <view
          style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
        >
          <text
            style="color: var(--lhr-text-color-secondary);"
          >
            Body 2-3
          </text>
        </view>
      </view>
    </view>
    <view
      style="display: flex; flex-direction: row;"
    >
      <view
        style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
      >
        <text
          style="color: var(--lhr-text-color-secondary);"
        >
          Footer 1
        </text>
      </view>
      <view
        style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
      >
        <text
          style="color: var(--lhr-text-color-secondary);"
        >
          Footer 2
        </text>
      </view>
      <view
        style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
      >
        <text
          style="color: var(--lhr-text-color-secondary);"
        >
          Footer 3
        </text>
      </view>
    </view>
  </view>
</page>
`;

exports[`Snapshot Tests with Verification > All Text Formatting Elements > should match snapshot for all text formatting elements 1`] = `
<page>
  <text
    style="color: var(--lhr-text-color); margin-bottom: 1em;"
  >
    <text
      style="color: var(--lhr-text-color);"
    >
      
          Text with 
    </text>
    <text
      style="color: var(--lhr-text-color); font-weight: bold;"
    >
      bold
    </text>
    <text
      style="color: var(--lhr-text-color);"
    >
      , 
    </text>
    <text
      style="color: var(--lhr-text-color); font-weight: bold;"
    >
      also bold
    </text>
    <text
      style="color: var(--lhr-text-color);"
    >
      ,
          
    </text>
    <text
      style="color: var(--lhr-text-color); font-style: italic;"
    >
      italic
    </text>
    <text
      style="color: var(--lhr-text-color);"
    >
      , 
    </text>
    <text
      style="color: var(--lhr-text-color); font-style: italic;"
    >
      also italic
    </text>
    <text
      style="color: var(--lhr-text-color);"
    >
      ,
          
    </text>
    <text
      style="color: var(--lhr-text-color); text-decoration: underline;"
    >
      underlined
    </text>
    <text
      style="color: var(--lhr-text-color);"
    >
      , and 
    </text>
    <text
      style="color: var(--lhr-text-color); font-family: monospace; background-color: rgb(240, 240, 240); padding: 2px 4px; border-radius: 3px;"
    >
      inline code
    </text>
    <text
      style="color: var(--lhr-text-color);"
    >
      .
          Combined: 
    </text>
    <text
      style="color: var(--lhr-text-color); font-weight: bold; text-decoration: underline;"
    >
      bold + underline
    </text>
  </text>
</page>
`;

exports[`Snapshot Tests with Verification > Complex Real-World Document > should match snapshot for complete HTML document 1`] = `
<page>
  <view
    style="flex-direction: column;"
  >
    <view
      style="flex-direction: column;"
    >
      <text
        style="font-size: 32px; font-weight: bold; color: var(--lhr-text-color);"
      >
        Article Title
      </text>
      <text
        style="color: var(--lhr-text-color); margin-bottom: 1em;"
      >
        <text
          style="color: var(--lhr-text-color);"
        >
          Published on 
        </text>
        <text
          style="color: var(--lhr-text-color);"
        >
          2024-01-01
        </text>
      </text>
    </view>
    <view
      style="flex-direction: column;"
    >
      <text
        style="font-size: 24px; font-weight: bold; color: var(--lhr-text-color);"
      >
        Introduction
      </text>
      <text
        style="color: var(--lhr-text-color); margin-bottom: 1em;"
      >
        <text
          style="color: var(--lhr-text-color);"
        >
          This is an introduction paragraph with 
        </text>
        <text
          style="color: var(--lhr-text-color); font-weight: bold;"
        >
          bold text
        </text>
        <text
          style="color: var(--lhr-text-color);"
        >
           and 
        </text>
        <text
          style="color: var(--lhr-text-color); font-style: italic;"
        >
          italic text
        </text>
        <text
          style="color: var(--lhr-text-color);"
        >
          .
        </text>
      </text>
      <text
        style="color: var(--lhr-text-color); margin-bottom: 1em;"
      >
        <text
          style="color: var(--lhr-text-color);"
        >
          It also contains a 
        </text>
        <text
          style="color: blue;"
        >
          link
        </text>
        <text
          style="color: var(--lhr-text-color);"
        >
           and some 
        </text>
        <text
          style="color: var(--lhr-text-color); font-family: monospace; background-color: rgb(240, 240, 240); padding: 2px 4px; border-radius: 3px;"
        >
          inline code
        </text>
        <text
          style="color: var(--lhr-text-color);"
        >
          .
        </text>
      </text>
    </view>
    <view
      style="flex-direction: column;"
    >
      <text
        style="font-size: 24px; font-weight: bold; color: var(--lhr-text-color);"
      >
        Features
      </text>
      <view
        style="flex-direction: column; padding-left: 5px;"
      >
        <view
          style="flex-direction: column; color: var(--lhr-text-color);"
        >
          <text
            style="color: var(--lhr-text-color);"
          >
            • Feature 1 with 
          </text>
          <text
            style="color: var(--lhr-text-color); font-weight: bold;"
          >
            emphasis
          </text>
        </view>
        <view
          style="flex-direction: column; color: var(--lhr-text-color);"
        >
          <text
            style="color: var(--lhr-text-color);"
          >
            • Feature 2
          </text>
        </view>
        <view
          style="flex-direction: column; color: var(--lhr-text-color);"
        >
          <text
            style="color: var(--lhr-text-color);"
          >
            • 
                Feature 3 with nested list:
                
          </text>
          <view
            style="flex-direction: column; padding-left: 5px;"
          >
            <view
              style="flex-direction: column; color: var(--lhr-text-color);"
            >
              <text
                style="color: var(--lhr-text-color);"
              >
                • Sub-feature 3.1
              </text>
            </view>
            <view
              style="flex-direction: column; color: var(--lhr-text-color);"
            >
              <text
                style="color: var(--lhr-text-color);"
              >
                • Sub-feature 3.2
              </text>
            </view>
          </view>
        </view>
      </view>
    </view>
    <view
      style="flex-direction: column;"
    >
      <text
        style="font-size: 24px; font-weight: bold; color: var(--lhr-text-color);"
      >
        Data Table
      </text>
      <view
        style="display: flex; flex-direction: column; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color);"
      >
        <view
          style="display: flex; flex-direction: row;"
        >
          <view
            style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); background-color: var(--lhr-bg-color-secondary); font-weight: bold; color: var(--lhr-text-color);"
          >
            <text
              style="font-weight: bold; color: var(--lhr-text-color);"
            >
              Name
            </text>
          </view>
          <view
            style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); background-color: var(--lhr-bg-color-secondary); font-weight: bold; color: var(--lhr-text-color);"
          >
            <text
              style="font-weight: bold; color: var(--lhr-text-color);"
            >
              Type
            </text>
          </view>
          <view
            style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); background-color: var(--lhr-bg-color-secondary); font-weight: bold; color: var(--lhr-text-color);"
          >
            <text
              style="font-weight: bold; color: var(--lhr-text-color);"
            >
              Description
            </text>
          </view>
        </view>
        <view>
          <view
            style="display: flex; flex-direction: row;"
          >
            <view
              style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
            >
              <text
                style="color: var(--lhr-text-color-secondary);"
              >
                Item 1
              </text>
            </view>
            <view
              style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
            >
              <text
                style="color: var(--lhr-text-color-secondary);"
              >
                Type A
              </text>
            </view>
            <view
              style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
            >
              <text
                style="color: var(--lhr-text-color-secondary);"
              >
                Description 1
              </text>
            </view>
          </view>
          <view
            style="display: flex; flex-direction: row;"
          >
            <view
              style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
            >
              <text
                style="color: var(--lhr-text-color-secondary);"
              >
                Item 2
              </text>
            </view>
            <view
              style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
            >
              <text
                style="color: var(--lhr-text-color-secondary);"
              >
                Type B
              </text>
            </view>
            <view
              style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0px; padding: 8px; border-width: 1px; border-style: solid; border-color: var(--lhr-border-color); color: var(--lhr-text-color-secondary);"
            >
              <text
                style="color: var(--lhr-text-color-secondary);"
              >
                Description 2
              </text>
            </view>
          </view>
        </view>
      </view>
    </view>
    <view
      style="flex-direction: column;"
    >
      <text
        style="font-size: 24px; font-weight: bold; color: var(--lhr-text-color);"
      >
        Code Example
      </text>
      <text
        style="font-family: monospace; color: var(--lhr-text-color);"
      >
        function hello() {
  console.log("Hello, World!");
}
      </text>
      <text
        style="color: var(--lhr-text-color);"
      >
        Line break example:
First line
Second line
      </text>
    </view>
    <view
      style="flex-direction: column;"
    >
      <text
        style="font-size: 24px; font-weight: bold; color: var(--lhr-text-color);"
      >
        Quote
      </text>
      <view
        style="flex-direction: column; margin-left: 40px; margin-right: 40px; padding-left: 16px; border-left: 4px solid var(--lhr-blockquote-border);"
      >
        <text
          style="color: var(--lhr-text-color);"
        >
          This is a blockquote containing important information.
        </text>
      </view>
    </view>
    <view
      style="flex-direction: column;"
    >
      <view
        style="height: 1px; background-color: var(--lhr-divider-color); margin: 1em 0px;"
      />
      <text
        style="color: var(--lhr-text-color);"
      >
        © 2024 Example. All rights reserved.
      </text>
    </view>
  </view>
</page>
`;

exports[`Snapshot Tests with Verification > Deeply Nested Structure > should match snapshot for deeply nested elements 1`] = `
<page>
  <view
    style="flex-direction: column;"
  >
    <view
      style="flex-direction: column;"
    >
      <view
        style="flex-direction: column;"
      >
        <view
          style="flex-direction: column;"
        >
          <view
            style="flex-direction: column;"
          >
            <view
              style="flex-direction: column;"
            >
              <text
                style="color: var(--lhr-text-color); font-weight: bold;"
              >
                Deep nested text
              </text>
            </view>
          </view>
        </view>
      </view>
    </view>
  </view>
</page>
`;

exports[`Snapshot Tests with Verification > Edge Cases and Special Characters > should match snapshot for edge cases 1`] = `
<page>
  <view
    style="flex-direction: column;"
  >
    <text
      style="color: var(--lhr-text-color);"
    >
      Special characters: &lt; &gt; & " '
    </text>
    <text
      style="color: var(--lhr-text-color);"
    >
      Unicode: 中文 日本語 한국어 🎉
    </text>
    <text
      style="color: var(--lhr-text-color);"
    >
      Multiple spaces:     and    tabs
    </text>
    <text
      style="color: var(--lhr-text-color); margin-bottom: 1em;"
    >
      <text
        style="color: var(--lhr-text-color);"
      >
        Empty elements: 
      </text>
      <text
        style="color: var(--lhr-text-color);"
      />
      <text
        style="color: var(--lhr-text-color);"
      >
         and 
      </text>
    </text>
    <view
      style="flex-direction: column;"
    />
    <text
      style="color: var(--lhr-text-color); margin-bottom: 1em;"
    />
  </view>
</page>
`;

exports[`Snapshot Tests with Verification > Element Attributes > should match snapshot for elements with common attributes 1`] = `
<page>
  <view
    style="flex-direction: column;"
  >
    <text
      style="color: var(--lhr-text-color);"
    >
      Paragraph with id and class
    </text>
    <view
      style="flex-direction: column;"
    >
      <text>
        Div with data attribute
      </text>
    </view>
  </view>
</page>
`;

exports[`Snapshot Tests with Verification > Image Element > should match snapshot for image with attributes 1`] = `
<page>
  <view
    style="flex-direction: column;"
  >
    <image
      src="https://example.com/image.jpg"
      style="width: 100%; height: auto;"
    />
    <text
      style="color: var(--lhr-text-color);"
    >
      Text below image
    </text>
  </view>
</page>
`;

exports[`Snapshot Tests with Verification > Inline Elements > should match snapshot for various inline elements 1`] = `
<page>
  <view
    style="flex-direction: column;"
  >
    <text
      style="color: var(--lhr-text-color); margin-bottom: 1em;"
    >
      <text
        style="color: var(--lhr-text-color);"
      >
        Link example: 
      </text>
      <text
        style="color: blue;"
      >
        Example Link
      </text>
    </text>
    <text
      style="color: var(--lhr-text-color); margin-bottom: 1em;"
    >
      <text
        style="color: var(--lhr-text-color);"
      >
        Code block: 
      </text>
      <text
        style="color: var(--lhr-text-color); font-family: monospace; background-color: rgb(240, 240, 240); padding: 2px 4px; border-radius: 3px;"
      >
        console.log("hello")
      </text>
    </text>
    <text
      style="color: var(--lhr-text-color); margin-bottom: 1em;"
    >
      <text
        style="color: var(--lhr-text-color);"
      >
        Span element: 
      </text>
      <text
        style="color: var(--lhr-text-color);"
      >
        Inline span
      </text>
    </text>
  </view>
</page>
`;

exports[`Snapshot Tests with Verification > Inline Styles > should match snapshot for elements with various inline styles 1`] = `
<page>
  <view
    style="flex-direction: column; padding: 20px; background-color: rgb(245, 245, 245);"
  >
    <text
      style="font-size: 24px; font-weight: bold; color: rgb(51, 51, 51);"
    >
      Styled Heading
    </text>
    <text
      style="color: rgb(102, 102, 102); margin-bottom: 1em; line-height: 1.6;"
    >
      <text
        style="color: var(--lhr-text-color);"
      >
        
            Paragraph with 
      </text>
      <text
        style="font-weight: bold; color: red;"
      >
        styled span
      </text>
    </text>
    <view
      style="flex-direction: column; border: 1px solid rgb(204, 204, 204); padding: 10px; border-radius: 5px;"
    >
      <text>
        
            Nested styled div
          
      </text>
    </view>
  </view>
</page>
`;

exports[`Snapshot Tests with Verification > List Elements (ul, ol, li) > should match snapshot for list elements with nesting 1`] = `
<page>
  <view
    style="flex-direction: column;"
  >
    <view
      style="flex-direction: column; padding-left: 5px;"
    >
      <view
        style="flex-direction: column; color: var(--lhr-text-color);"
      >
        <text
          style="color: var(--lhr-text-color);"
        >
          • Unordered item 1
        </text>
      </view>
      <view
        style="flex-direction: column; color: var(--lhr-text-color);"
      >
        <text
          style="color: var(--lhr-text-color);"
        >
          • Unordered item 2
        </text>
      </view>
      <view
        style="flex-direction: column; color: var(--lhr-text-color);"
      >
        <text
          style="color: var(--lhr-text-color);"
        >
          • Nested:
              
        </text>
        <view
          style="flex-direction: column; padding-left: 5px;"
        >
          <view
            style="flex-direction: column; color: var(--lhr-text-color);"
          >
            <text
              style="color: var(--lhr-text-color);"
            >
              • Nested item 1
            </text>
          </view>
          <view
            style="flex-direction: column; color: var(--lhr-text-color);"
          >
            <text
              style="color: var(--lhr-text-color);"
            >
              • Nested item 2
            </text>
          </view>
        </view>
      </view>
    </view>
    <view
      style="flex-direction: column; padding-left: 5px;"
    >
      <view
        style="flex-direction: column; color: var(--lhr-text-color);"
      >
        <text
          style="color: var(--lhr-text-color);"
        >
          1. Ordered item 1
        </text>
      </view>
      <view
        style="flex-direction: column; color: var(--lhr-text-color);"
      >
        <text
          style="color: var(--lhr-text-color);"
        >
          2. Ordered item 2
        </text>
      </view>
    </view>
  </view>
</page>
`;

exports[`Snapshot Tests with Verification > Semantic Block Elements > should match snapshot for semantic HTML5 elements 1`] = `
<page>
  <view
    style="flex-direction: column;"
  >
    <view
      style="flex-direction: column;"
    >
      <text
        style="font-size: 32px; font-weight: bold; color: var(--lhr-text-color);"
      >
        Article Header
      </text>
    </view>
    <view
      style="flex-direction: column;"
    >
      <text
        style="font-size: 24px; font-weight: bold; color: var(--lhr-text-color);"
      >
        Section Title
      </text>
      <text
        style="color: var(--lhr-text-color);"
      >
        Section content.
      </text>
    </view>
    <view
      style="flex-direction: column;"
    >
      <view
        style="flex-direction: column; padding-left: 5px;"
      >
        <view
          style="flex-direction: column; color: var(--lhr-text-color);"
        >
          <text>
            • 
          </text>
          <text
            style="color: blue;"
          >
            Link 1
          </text>
        </view>
        <view
          style="flex-direction: column; color: var(--lhr-text-color);"
        >
          <text>
            • 
          </text>
          <text
            style="color: blue;"
          >
            Link 2
          </text>
        </view>
      </view>
    </view>
    <view
      style="flex-direction: column;"
    >
      <text
        style="color: var(--lhr-text-color);"
      >
        Sidebar content.
      </text>
    </view>
    <view
      style="flex-direction: column;"
    >
      <text
        style="color: var(--lhr-text-color);"
      >
        Article footer.
      </text>
    </view>
  </view>
</page>
`;

exports[`Snapshot Tests with Verification > Special Elements (hr, br, blockquote, pre) > should match snapshot for special elements 1`] = `
<page>
  <view
    style="flex-direction: column;"
  >
    <text
      style="color: var(--lhr-text-color);"
    >
      Text before horizontal rule
    </text>
    <view
      style="height: 1px; background-color: var(--lhr-divider-color); margin: 1em 0px;"
    />
    <text
      style="color: var(--lhr-text-color);"
    >
      Text after horizontal rule
    </text>
    <text
      style="color: var(--lhr-text-color);"
    >
      Line 1
Line 2
Line 3
    </text>
    <view
      style="flex-direction: column; margin-left: 40px; margin-right: 40px; padding-left: 16px; border-left: 4px solid var(--lhr-blockquote-border);"
    >
      <text
        style="color: var(--lhr-text-color);"
      >
        This is a blockquote with multiple lines.
      </text>
      <text
        style="color: var(--lhr-text-color);"
      >
        It can contain paragraphs.
      </text>
    </view>
    <text
      style="font-family: monospace; color: var(--lhr-text-color);"
    >
      const x = 1;
const y = 2;
console.log(x + y);
    </text>
  </view>
</page>
`;
